load-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: "hellotondu"
  labels:
    app: sonambewafaa

spec:
  containers:
  - name: hellotondu
    image: sonambewafaa/hellotondu
 
    ports:
    - containerPort:  80
      name:  http


---
apiVersion: v1
kind: Pod
metadata:
  name: "hellorondu"
  labels:
    app: sonambewafaa
spec:
  containers:
  - name: hellorondu
    image: sonambewafaa/hellorondu
 
    ports:
    - containerPort:  80
      name:  http

---
apiVersion: v1
kind: Pod
metadata:
  name: "hellodhondhu"
  labels:
    app: sonambewafaa
spec:
  containers:
  - name: hellodhondhu
    image: sonambewafaa/hellodhondhu
 
    ports:
    - containerPort:  80
      name:  http
