pod-dynamic.yml
apiVersion: v1
kind: Pod
metadata:
  name: "dynamicdiskpvc"
  namespace: default
  labels:
    app: "dynamicdiskpvc"
spec:
  containers:
  - name: dynamicdiskpvc
    image: nginx

    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
    - name: localtime
      mountPath: /usr/share/nginx/html/
  volumes:
    - name: localtime
      persistentVolumeClaim:
        claimName: diskpvcdynamic
