podpv.yml
apiVersion: v1
kind: Pod
metadata:
  name: "mypodpv"
spec:
  containers:
  - name: mycon
    image: nginx

    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
      - mountPath: /usr/share/nginx/html/
        name: azuredisk
        

  volumes:
    - persistentVolumeClaim:
        claimName: mypvc
      name: azuredisk
